Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17284

OrgPlayer is not working in ReactOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • NTCore
    • None

    Description

      When run it, I get a "File error" dialog box that pops up. I m attaching a screenshot of it working in Windows Server 2003, a screenshot of it not working in ReactOS, a debug log made when running it in ReactOS, and the archive containing it and its associated dlls.

      Attachments

        1. DragDrop.ocx
          48 kB
        2. GOX.zip
          54 kB
        3. OrgPlayer_FileMon_ReactOS.png
          OrgPlayer_FileMon_ReactOS.png
          42 kB
        4. OrgPlayer_FileMon_Win2K3.log
          65 kB
        5. OrgPlayer_ReactOS_loader_snaps.log
          128 kB
        6. OrgPlayer_ReactOS_not_working.png
          OrgPlayer_ReactOS_not_working.png
          30 kB
        7. OrgPlayer_ReactOS.log
          21 kB
        8. OrgPlayer_Win2K3_working.png
          OrgPlayer_Win2K3_working.png
          45 kB
        9. up0102.zip
          365 kB

        Activity

          People

            ThFabba ThFabba
            Zero3K Zero3K
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: