[NTOS:MM] VirtualSize overrides SizeOfRawData when mapping PE files. CORE-17284

This fixes the related failures in ntdll_apitest:NtMapViewOfSection
as well as loading of OrgPlayer's DragDrop.ocx.